--- a/app/static/sass/_homepage.scss
+++ b/app/static/sass/_homepage.scss
@@ -272,3 +272,7 @@
         color: $white;
     }
 }
+
+.b-sg-landing-page .b-slider.m-mobile-screens .b-slide {
+background-color: red;
+}
