--- a/app/static/sass/_landing.scss
+++ b/app/static/sass/_landing.scss
@@ -109,10 +109,10 @@ $red: rgba(195,0,20,1);
     font-weight: 600;
     color: $white;
     text-shadow: 0 0 1px $black;
-  }
-  &.m-black {
+}
+&.m-black {
     background-color: $black;
-  }
+}
 }
 
 .gray-025 { background-color: $gray-025; }
@@ -159,43 +159,43 @@ $red: rgba(195,0,20,1);
     // max-width: $desktop;
     // margin-left: auto;
     // margin-right: auto;
-  }
+}
 
-  @mixin circle {
+@mixin circle {
     overflow: hidden;
     border-radius: 50%;
-  }
+}
 
-  @mixin flexbox {
+@mixin flexbox {
     display: -webkit-box;
     display: -moz-box;
     display: -ms-flexbox;
     display: -webkit-flex;
     display: flex;
-  }
+}
 
-  @mixin flex($values) {
+@mixin flex($values) {
     -webkit-box-flex: $values;
     -moz-box-flex:  $values;
     -webkit-flex:  $values;
     -ms-flex:  $values;
     flex:  $values;
-  }
+}
 
-  @mixin order($val) {
+@mixin order($val) {
     -webkit-box-ordinal-group: $val;
     -moz-box-ordinal-group: $val;
     -ms-flex-order: $val;
     -webkit-order: $val;
     order: $val;
-  }
+}
 
-  @mixin flex-basis($val) {
+@mixin flex-basis($val) {
     flex-basis: $val;
     -webkit-flex-basis: $val;
-  }
+}
 
-  @mixin material-icons {
+@mixin material-icons {
     font-family: 'Material Icons';
     font-weight: normal;
     font-style: normal;
@@ -209,14 +209,14 @@ $red: rgba(195,0,20,1);
     direction: ltr;
     -webkit-font-feature-settings: 'liga';
     -webkit-font-smoothing: antialiased;
-  }
+}
 
-  @mixin placeholder {
+@mixin placeholder {
     &::-webkit-input-placeholder { @content }
     &:-moz-placeholder { @content }
     &::-moz-placeholder { @content }
     &:-ms-input-placeholder { @content }
-  }
+}
 
 $noi-yellow: #d9b549;
 $noi-orange: #ed5c42;
@@ -423,47 +423,53 @@ $noi-purple: #523080;
         @include breakpoint($desktop) {
             margin-bottom: -95px;
             padding-top: 40px;
-        // margin-top: 40px;
-    }
+        }
 
-    .slick-list {
-        @include breakpoint($desktop) { padding-bottom: 15px !important; }
-    }
 
-    .b-slide {
-        display: inline-block;
-        outline: none;
-        text-align: center;
-        width: 400px;
-        transition: all 0.5s ease;
 
-        header {
+        .slick-list {
+            @include breakpoint($desktop) { padding-bottom: 15px !important; }
+        }
+
+        .b-slide {
+            display: inline-block;
+            outline: none;
+            text-align: center;
+            max-width: 90vw;
             transition: all 0.5s ease;
 
-            h4 {
-                padding: 0 10px;
+            header {
+                transition: all 0.5s ease;
+
+                h4 {
+                    padding: 0 10px;
+                }
             }
-        }
 
-        img {
-            max-width: 300px;
-            margin: 0 auto;
-            transition: all 0.5s ease;
-            box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+            img {
+                max-width: 90vw;
+                margin: 0 auto;
+                transition: all 0.5s ease;
+                box-shadow: 0 5px 15px rgba(0,0,0,0.2);
 
-            @include breakpoint($mobile-only) { max-height: 240px; }
-            @include breakpoint($tablet) { max-height: 360px; }
-            @include breakpoint($desktop) { max-height: 500px; }
-        }
+                @include breakpoint($mobile-only) { max-height: 240px; }
+                @include breakpoint($tablet) { max-height: 360px; }
+                @include breakpoint($desktop) { max-height: 500px; }
+            }
 
         // &:not(.slick-current) img,
         // &:not(.slick-current) header {
         //     transform: scale(.7);
         // }
 
+
+            margin-left: 5vw;
+            margin-right: 5vw;
+
         &:not(.slick-current) {
             transform: scale(.8);
-            transform-origin: 10%;
+            max-width: 100vw;
+            // transform-origin: 10%;
             transition: all 0.5s ease-in;
         }
     }
